# src/routes/index.js
@@ -4,6 +4,7 @@ import contentItemRoutes from "./contentItemRoutes.js";
 import groupRoutes from "./groupRoutes.js";
 import notificationRoutes from "./notificationRoutes.js";
 import userRotes from "./userRoutes.js";
+import pictureRoutes from "./pictureRoutes.js";
 import sequelize from "../db/index.js";
 
 const router = express.Router();
@@ -13,6 +14,7 @@ router.use("/content", contentItemRoutes);
 router.use("/groups", groupRoutes);
 router.use("/notifications", notificationRoutes);
 router.use("/users", userRotes);
+router.use("/pictures", pictureRoutes);
 
 router.get("/create-tables", async (req, res) => {
   try {
